--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
             <version>7.4.0</version>
         </dependency>
 
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.hamcrest/hamcrest &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.hamcrest</groupId>-->
-<!--            <artifactId>hamcrest</artifactId>-->
-<!--            <version>2.2</version>-->
-<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+        </dependency>
    </dependencies>
 
 </project>
